systemd management moved to handlers. hostgroup ansible_default_ipv4 used to build start_join list. playbook set up to bootstrap on node0, then remove bootstrap from node0 after node1 and node2 finish provisioning

--- a/provision.yml
+++ b/provision.yml
@@ -3,6 +3,13 @@
     consul_bootstrap: true
   roles:
   - role: consul
-#- hosts: node1,node2,node0
-#  roles:
-#  - role: consul
+- hosts: node1,node2
+  vars:
+    consul_bootstrap: false
+  roles:
+  - role: consul
+- hosts: node0
+  vars:
+    consul_bootstrap: false
+  roles:
+  - role: consul
