--- a/roles/consul/defaults/main.yml
+++ b/roles/consul/defaults/main.yml
@@ -1,18 +1,16 @@
 ---
 consul_version: "1.3.0"
-consul_ui_version: 
+consul_ui: true
 consul_arch: "linux_amd64"
 consul_filename: "consul_{{ consul_version }}_{{ consul_arch }}.zip"
 consul_url: "https://releases.hashicorp.com/consul/{{ consul_version }}/{{ consul_filename }}"
 consul_sha_url: "https://releases.hashicorp.com/consul/{{ consul_version }}/consul_{{ consul_version }}_SHA256SUMS"
 consul_sha256: "{{ (lookup('url', consul_sha_url) | regex_search('([a-f0-9]{64}  consul_' + consul_version + '_' + consul_arch + '.zip),')).split()[0] }}"
-consul_ui_url:
 consul_user: "consul"
 consul_configdir: "/etc/consul.d"
 consul_server: true
 consul_datacenter: "dc1"
 consul_data_dir: "/var/consul"
-consul_ui_dir: "/var/consul/dist"
 consul_encrypt: "HQBfFob3L6AqoTkLfS5E/A==" #todo - generate on new run?
 consul_log_level: "INFO"
 consul_enable_syslog: true
