vault now initialized, keys written to /etc/profile.d/vault.sh so we can interact with vault as soon as everything's up

--- a/roles/vault/tasks/init.yml
+++ b/roles/vault/tasks/init.yml
@@ -3,6 +3,19 @@
   register: vault_init
   environment:
     VAULT_ADDR: "http://127.0.0.1:8200"
+- name: write out /etc/profile.d/vault.sh
+  lineinfile:
+    line: "{{ item }}"
+    path: /etc/profile.d/vault.sh
+    create: yes
+  with_items:
+    - "export VAULT_ADDR=\"http://127.0.0.1:8200\""
+    - "export VAULT_UNSEAL0=\"{{ vault_init.stdout_lines[0].split()[3] }}\""
+    - "export VAULT_UNSEAL1=\"{{ vault_init.stdout_lines[1].split()[3] }}\""
+    - "export VAULT_UNSEAL2=\"{{ vault_init.stdout_lines[2].split()[3] }}\""
+    - "export VAULT_UNSEAL3=\"{{ vault_init.stdout_lines[3].split()[3] }}\""
+    - "export VAULT_UNSEAL4=\"{{ vault_init.stdout_lines[4].split()[3] }}\""
+    - "export VAULT_TOKEN=\"{{ vault_init.stdout_lines[6].split()[3] }}\""
 - shell: vault operator unseal {{ vault_init.stdout_lines[0].split()[3] }}
   environment:
     VAULT_ADDR: "http://127.0.0.1:8200"
@@ -12,7 +25,3 @@
 - shell: vault operator unseal {{ vault_init.stdout_lines[2].split()[3] }}
   environment:
     VAULT_ADDR: "http://127.0.0.1:8200"
-- debug:
-    var: vault_init.stdout_lines
-- debug:
-    var: vault_init.stdout_lines[2].split()[3]
